# IslandsOfInsightHelper

./: .gitignore  README.md  devharness.py  pyproject.toml  requirements.txt
ioi_helper/: __init__.py  __main__.py  ioi_helper.py  ioi_helper_cli.py  ioi_helper_cli.txt  ioi_helper_core.py
ioi_helper/data/: profileHub_ext.json
ioihelper/: __init__.py  ioihelper_cli.py
